# api-user-system

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: e2f5e01e66be_create_users_and_profiles_tables.py
app/: main.py
app/api/: auth.py  profiles.py  users.py
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  user.py
app/repositories/: __init__.py  advanced_user.py  base.py  mixins.py  user.py
app/schemas/: __init__.py  token.py  user.py
app/services/: auth_service.py  base.py  manager.py  profile_service.py  user_service.py
tests/: conftest.py  test_auth.py  test_edge_cases.py  test_integration.py  test_profiles.py  test_repositories.py  test_security.py  test_users.py
