[project]
name = "api-user-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.12.1",
    "asyncpg==0.29.0",
    "bcrypt==4.0.1",
    "fastapi>=0.115.12",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.7",
    "pydantic[email]==2.5.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy[asyncio]==2.0.23",
    "uvicorn>=0.34.2",
]
